--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
+/* Header */
+
 .header,
 header {
   background-color: #f0fff0;
 }
+
 .top-margin {
   margin-top: 60px;
 }
@@ -14,6 +17,9 @@ header {
   padding-left: 15px;
   padding-right: 15px;
 }
+
+/* Navbar */
+
 .navbar-nav li:hover {
   color: black;
   border: none;
@@ -22,6 +28,7 @@ header {
 
   background-color: #21b573;
 }
+
 .sign-in {
   color: black;
   border: none;
@@ -30,22 +37,32 @@ header {
   padding: 3px 10px;
   background-color: #21b573;
 }
+
+/* Header Intro */
+
 .header {
   padding: 20px 40px;
 }
+
 .header-text h6 {
   color: #fd511a;
 }
+
 .header-text h1 {
   font-weight: bolder;
   font-size: 60px;
 }
+
 .header-text p {
   color: dimgray;
 }
+
 #green-color {
   color: #21b573;
 }
+
+/* Button */
+
 .button-green {
   color: white;
   border: none;
@@ -54,9 +71,13 @@ header {
   padding: 8px 30px;
   background-color: #21b573;
 }
+
 .button-green:hover {
   opacity: 0.8;
 }
+
+/* Information/books */
+
 .each-item h4,
 .card-body h4 {
   padding-top: 30px;
@@ -70,10 +91,13 @@ header {
   border-radius: 10px;
   background-color: #f0fff0;
 }
+
 .info:hover {
   box-shadow: 0px 3px 20px lightgray;
   background-color: white;
 }
+
+/* Courses */
 
 .card-body p {
   color: #585859;
@@ -83,31 +107,40 @@ header {
   height: 24px;
   width: 24px;
 }
+
 .card-footer h6 {
   color: #585859;
 }
+
 .courses-title {
   color: #413960;
   margin-bottom: 50px;
 }
+
 .card {
   border: none;
   border-radius: 8px;
   box-shadow: 0px 10px 10px lightgray;
 }
+
 .card-footer {
   padding: 0 25px;
   border-top: none;
   border-radius: 8px;
   background-color: white;
 }
+
+/* Testimonial */
+
 .carousel-info {
   padding: 20px 40px;
 }
+
 .carousel-info img {
   border-radius: 50%;
   padding-left: 40px;
 }
+
 .carousel-indicators li {
   background-color: #cecece;
   height: 10px;
@@ -124,9 +157,12 @@ header {
 .testimonial-title h2 {
   font-weight: 1000;
 }
+
 .testimonial-title {
   margin-bottom: 50px;
 }
+
+/* Footer */
 
 footer {
   background-color: #282531;
@@ -141,13 +177,13 @@ footer {
   font-weight: bold;
   margin-bottom: 10px;
 }
-/* 
-#credits {
-  text-align: center !important;
-} */
+
+/* Extra CSS  */
+
 * {
   transition: 0.3s all ease-in-out;
 }
+
 html {
   scroll-behavior: smooth;
 }
