--- a/style.css
+++ b/style.css
@@ -112,10 +112,6 @@ header {
   color: #585859;
 }
 
-.courses-title {
-  color: #413960;
-  margin-bottom: 50px;
-}
 
 .card {
   border: none;
@@ -131,9 +127,17 @@ header {
 }
 
 /* Testimonial */
+.courses-title {
+  color: #413960;
+  margin-bottom: 50px;
+}
 
 .carousel-info {
   padding: 20px 40px;
+}
+
+.review h6 {
+  padding-right: 100px;
 }
 
 .carousel-info img {
